fixed screen alignment

--- a/src/styles/DownloadComplete.css
+++ b/src/styles/DownloadComplete.css
@@ -3,17 +3,25 @@
   flex-direction: column;
   align-items: center;
   row-gap: 30px;
+
   position: fixed;
   top: 30%;
-  left: 34%;
+  left: 0;
+  right: 0;
+  width: 300px;
+  height: 100px;
+  margin-left: auto;
+  margin-right: auto;
+  text-align: center;
+
   background-color: rgb(1, 5, 73);
-  padding: 80px;
+  padding: 50px;
   border-radius: 15px;
   border: solid 1px #bebebe;
-  box-shadow: inset 0px 0px 7px #cacaca;
+  box-shadow: inset 0px 0px 7px #cacaca7e;
   animation: popup 0.3s ease-in-out;
   color: #fff;
-  font-size: 0.8rem;
+  font-size: 0.5rem;
 }
 
 .d-c-maindiv{
